src/test/resources/functionly/bad/syntax/bad4.fly
public function bad4(a, b, c)
begin
  if (a ~ b) then begin
    x = 6;
  end else begin
    x = b;
  end;
end
